<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey"
        android:background="@color/light_grey"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/student_login"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_alignParentStart="true"
            android:layout_height="30dp"
            android:id="@+id/email"
            android:layout_marginTop="10dp"
            android:src="@drawable/baseline_email_24"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/email"
            android:background="@color/white"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="20sp"
            android:paddingVertical="7dp"
            android:paddingHorizontal="10dp"
            android:gravity="bottom"
            android:backgroundTint="@color/white"
            android:layout_marginHorizontal="10dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_alignParentStart="true"
            android:layout_height="30dp"
            android:id="@+id/pass"
            android:layout_marginTop="10dp"
            android:src="@drawable/baseline_lock_24"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pass"
            android:background="@color/white"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey"
            android:textSize="20sp"
            android:paddingVertical="7dp"
            android:paddingHorizontal="10dp"
            android:gravity="bottom"
            android:backgroundTint="@color/white"
            android:layout_marginHorizontal="10dp"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:id="@+id/login_btn"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corner_bg"
        android:paddingVertical="5dp"
        android:paddingHorizontal="30dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/don_t_have_an_account"/>


        <TextView
            android:id="@+id/sign_up_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:text="@string/sign_up_here"/>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>