<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/dark_purple">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/hi_aman"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/user_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/class_6"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/rectangle_3"
            android:layout_alignParentStart="true"
            app:queryHint="Search All Chapters"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="0dp"
            app:iconifiedByDefault="false"
            app:searchIcon="@null"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            />

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/icons8_search"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recyclerview"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>